welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value &&
while(&& estDosMur()!=true){
      ^