welcome.lessons.welcome.summative.Moria.scala.code
while(&& estDosMur()!=true){
	while(estSurBiscuit()==false){
  	recule()
	}
	prendBiscuit()
	while(estSurBiscuit()==false){
  	avance()
	}
	recule()
	poseBiscuit()
	recule()
	if (estDosMur()==true){
  	gauche()
  	avance()
  	gauche()
  	avance(2)
	}
}